--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,9 +8,10 @@
     <base href="/">
 </head>
 
-<body >
-   <app-component></app-component>
-    <script src="/bundle.js"></script> 
+<body>
+    <app-component></app-component>
+    <ui-view></ui-view>
+    <script src="/bundle.js"></script>
 </body>
 
 
